// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getAllTemplatesBySize given: size=medi when: getAllTemplatesBySize is called then: returns nano + mini + medi templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "3.3.1.blueprint.product.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
  "2.1.criteria.blackbox.stone",
  "2.1.criteria.blackbox.guard",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.v1.stone",
  "3.1.3.research.internal.product.code.test._.v1.stone",
  "5.3.verification.v1.stone",
  "5.3.verification.v1.guard",
  "2.3.criteria.blueprint.stone",
  "3.1.1.research.external.product.access._.v1.stone",
  "3.1.1.research.external.product.claims._.v1.stone",
  "3.1.5.research.reflection.product.premortem._.v1.stone",
  "3.1.5.research.reflection.product.rootcause._.v1.stone",
  "3.1.5.research.reflection.product.audience._.v1.stone",
  "3.2.distill.repros.experience._.v1.stone",
  "3.2.distill.repros.experience._.v1.guard",
  "5.2.evaluation.v1.stone",
  "5.2.evaluation.v1.guard",
  "5.5.playtest.v1.stone",
  "5.5.playtest.v1.guard",
]
`;

exports[`getAllTemplatesBySize given: size=mega when: getAllTemplatesBySize is called then: returns all templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "3.3.1.blueprint.product.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
  "2.1.criteria.blackbox.stone",
  "2.1.criteria.blackbox.guard",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.v1.stone",
  "3.1.3.research.internal.product.code.test._.v1.stone",
  "5.3.verification.v1.stone",
  "5.3.verification.v1.guard",
  "2.3.criteria.blueprint.stone",
  "3.1.1.research.external.product.access._.v1.stone",
  "3.1.1.research.external.product.claims._.v1.stone",
  "3.1.5.research.reflection.product.premortem._.v1.stone",
  "3.1.5.research.reflection.product.rootcause._.v1.stone",
  "3.1.5.research.reflection.product.audience._.v1.stone",
  "3.2.distill.repros.experience._.v1.stone",
  "3.2.distill.repros.experience._.v1.guard",
  "5.2.evaluation.v1.stone",
  "5.2.evaluation.v1.guard",
  "5.5.playtest.v1.stone",
  "5.5.playtest.v1.guard",
  "3.1.1.research.external.product.domain._.v1.stone",
  "3.1.1.research.external.product.domain.terms.v1.stone",
  "3.1.1.research.external.product.references._.v1.stone",
  "3.1.2.research.external.factory.testloops._.v1.stone",
  "3.1.2.research.external.factory.oss.levers._.v1.stone",
  "3.1.2.research.external.factory.templates._.v1.stone",
  "3.1.4.research.internal.factory.blockers._.v1.stone",
  "3.1.4.research.internal.factory.opports._.v1.stone",
  "3.2.distill.domain._.v1.stone",
  "3.2.distill.domain._.v1.guard",
  "3.2.distill.factory.upgrades._.v1.stone",
  "3.3.0.blueprint.factory.v1.stone",
]
`;

exports[`getAllTemplatesBySize given: size=mini when: getAllTemplatesBySize is called then: returns nano + mini templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "3.3.1.blueprint.product.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
  "2.1.criteria.blackbox.stone",
  "2.1.criteria.blackbox.guard",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.v1.stone",
  "3.1.3.research.internal.product.code.test._.v1.stone",
  "5.3.verification.v1.stone",
  "5.3.verification.v1.guard",
]
`;

exports[`getAllTemplatesBySize given: size=nano when: getAllTemplatesBySize is called then: returns only nano-level templates 1`] = `
[
  "0.wish.md",
  "refs/template.[feedback].v1.[given].by_human.md",
  "1.vision.stone",
  "1.vision.guard",
  "3.3.1.blueprint.product.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
]
`;
